# Water_Prod_App

./: README.md  pyproject.toml
water_prod_app/: hooks.py  modules.txt
water_prod_app/water_prod_app/doctype/machine/: machine.js  machine.json  machine.py  test_machine.py
water_prod_app/water_prod_app/doctype/operator/: operator.js  operator.json  operator.py  test_operator.py
water_prod_app/water_prod_app/doctype/ppm_checkout/: ppm_checkout.js  ppm_checkout.json  ppm_checkout.py  test_ppm_checkout.py
water_prod_app/water_prod_app/doctype/record_detail/: record_detail.json  record_detail.py
